--- a/frontend/src/components/Footer/styles.css
+++ b/frontend/src/components/Footer/styles.css
@@ -6,10 +6,11 @@
 
 .footer-max-container {
     width: 100%;
-    height: 690.667px;
+    min-height: 1000px;
     background-color: var(--tert);
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .footer-container {
@@ -38,8 +39,7 @@
 
 .footer-base-text-container {
     padding: 30px 50px 30px 50px;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 .footer-grid-container {
@@ -49,13 +49,20 @@
     max-width: 380px;
 }
 
-.footer-logo {
+.footer-img {
     margin-right: 20px;
     height: 25px;
     width: 25px;
 }
 
-.footer-logo h5 {
+.footer-img h5 {
     color: #fff;
     text-decoration-color: transparent;
+}
+
+.footer-logo {
+    margin-left: 20px;
+    height: 80px;
+    width: 80px;
+    padding-top: 30px;
 }
