--- a/frontend/src/components/Button/styles.css
+++ b/frontend/src/components/Button/styles.css
@@ -1,8 +1,3 @@
-:root {
-    --prim: #68044a;
-    --seco: #94076a;
-}
-
 .cl-btn {
     padding: 10px 30px;
     border-radius: 4px;
@@ -10,7 +5,7 @@
     border: none;
     color: #fff;
     cursor: pointer;
-    background-color: var(--prim);
+    background-color: var(--seco);
     margin-bottom: 30px;
     margin-right: 10px;
     text-decoration-color: transparent;
@@ -18,10 +13,10 @@
 
 .cl-btn:hover {
     padding: 8px 28px;
+    background-color: var(--tert);
     transition: all 0.3s ease-out;
-    background-color: transparent;
-    color: var(--seco);
+    color: #fff;
     border-radius: 4px;
-    border: 2px solid var(--primary);
+    border: 2px solid var(--seco);
     text-decoration-color: transparent;
 }
