--- a/frontend/src/components/Form/styles.css
+++ b/frontend/src/components/Form/styles.css
@@ -1,9 +1,3 @@
-:root {
-    --prim: #731c3d;
-    --seco: #94076a;
-    --tert: #440431;
-}
-
 .cl-form-container {
     max-height: 300px;
     max-width: 380px;
@@ -36,7 +30,7 @@
     border-radius: 4px;
     font-size: 18px;
     border: none;
-    background-color: #054650;
+    background-color: var(--seco);
     color: #fff;
     cursor: pointer;
     text-decoration-color: transparent;
@@ -45,10 +39,10 @@
 .cl-form-btn:hover {
     padding: 6px 26px;
     transition: all 0.3s ease-out;
-    background-color: var(--primary);
+    background-color: var(--quar);
     color: #fff;
     border-radius: 4px;
-    border: 2px solid #054650;
+    border: 2px solid var(--seco);
 }
 
 .cl-quest-card-image {
