--- a/frontend/src/components/QuestStars/styles.css
+++ b/frontend/src/components/QuestStars/styles.css
@@ -1,10 +1,10 @@
-.gmnc-stars-container {
+.cl-stars-container {
     width: 130px;
     display: flex;
     justify-content: space-between;
 }
 
-.gmnc-stars-container svg {
+.cl-stars-container svg {
     width: 22px;
     height: auto;
 }
