--- a/frontend/src/components/Pagination/styles.css
+++ b/frontend/src/components/Pagination/styles.css
@@ -4,6 +4,7 @@
 }
 
 .cl-pagination-container {
+    background-color: #141f29;
     padding: 15px 0;
     display: flex;
     justify-content: center;
@@ -11,6 +12,7 @@
 }
 
 .cl-pagination-box {
+    background-color: #141f29;
     width: 180px;
     display: flex;
     justify-content: space-between;
@@ -23,6 +25,7 @@
 }
 
 .cl-pagination-button {
+    background-color: #141f29;
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -39,6 +42,7 @@
 }
 
 .cl-pagination-button:disabled {
+    background-color: #141f29;
     border: 1px solid var(--sec);
     cursor: unset;
     color: #fff;
@@ -49,6 +53,7 @@
 }
 
 .cl-pagination-container p {
+    background-color: #141f29;
     margin: 0;
     font-size: 12px;
     color: #fff;
