Menu items refactor

--- a/frontend/src/components/Dropdown/styles.css
+++ b/frontend/src/components/Dropdown/styles.css
@@ -1,5 +1,5 @@
 .dropdonw-menu {
-    background: var(--tert);
+    background: var(--prim);
     max-width: 330px;
     position: absolute;
     top: 80px;
