--- a/frontend/src/components/Pagination/styles.css
+++ b/frontend/src/components/Pagination/styles.css
@@ -1,10 +1,5 @@
-:root {
-    --primary: #a31836;
-    --sec: #c2c2c2;
-}
-
 .cl-pagination-container {
-    background-color: #141f29;
+    background-color: var(--sept);
     padding: 15px 0;
     display: flex;
     justify-content: center;
@@ -12,7 +7,7 @@
 }
 
 .cl-pagination-box {
-    background-color: #141f29;
+    background-color: var(--sept);
     width: 180px;
     display: flex;
     justify-content: space-between;
@@ -32,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 3px solid var(--sec);
+    border: 3px solid var(--sena);
     cursor: pointer;
 }
 
@@ -42,7 +37,7 @@
 
 .cl-pagination-button:disabled {
     background-color: transparent;
-    border: 3px solid var(--sec);
+    border: 3px solid var(--sena);
     cursor: unset;
     color: #fff;
 }
@@ -59,4 +54,54 @@
 
 .cl-flip-horizontal {
     transform: rotate(180deg);
+}
+
+.cl-pagination-one-container {
+    position: absolute;
+    height: 300px;
+    width: 60px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cl-pagination-one-box {
+    border-radius: 100px;
+    background-color: var(--nona);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.cl-pagination-one-box form {
+    width: 100%;
+    display: flex;
+}
+
+.cl-pagination-one-button {
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid var(--sena);
+    cursor: pointer;
+}
+
+.cl-pagination-one-button svg {
+    filter: brightness(0) saturate(100%) invert(26%) sepia(19%) saturate(7395%) hue-rotate(234deg) brightness(89%) contrast(92%);
+}
+
+.cl-pagination-one-button:disabled {
+    background-color: transparent;
+    border: 3px solid var(--sena);
+    cursor: unset;
+    color: #fff;
+}
+
+.cl-pagination-one-button:disabled svg {
+    filter: none;
 }
