--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-    background-color: #141f29;
+    background-color: var(--sept);
     color: #fff;
     max-inline-size: 100%;
     max-zoom: 100%;
@@ -14,11 +14,25 @@
     height: 100%;
 }
 
-.article-nav-container {
-    height: 300px;
+.article-scroll-container {
+    max-height: 300px;
     padding: 20px 10px 20px 10px;
+    display: flex;
+    overflow-x: auto;
+}
+
+.article-scroll-container::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.article-item {
+    width: 300px;
+    height: px;
+    text-align: center;
+    background-color: var(--sept);
 }
 
 .quest-nav-container {
-    background-color: #141f29;
+    background-color: var(--sept);
 }
