--- a/frontend/src/components/Pagination/styles.css
+++ b/frontend/src/components/Pagination/styles.css
@@ -1,5 +1,5 @@
 .cl-pagination-container {
-    background-color: var(--sept);
+    background-color: transparent;
     padding: 15px 0;
     display: flex;
     justify-content: center;
@@ -57,13 +57,14 @@
 }
 
 .cl-pagination-one-container {
-    position: absolute;
+    position: relative;
     height: 300px;
     width: 60px;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 0px 20px 20px 0px;
 }
 
 .cl-pagination-one-box {
@@ -80,10 +81,10 @@
 }
 
 .cl-pagination-one-button {
-    width: 35px;
-    height: 35px;
+    width: 32px;
+    height: 32px;
     border-radius: 50px;
-    background-color: transparent;
+    background-color: var(--nona);
     display: flex;
     justify-content: center;
     align-items: center;
