User Component Ref

--- a/frontend/src/components/NavBar/styles.css
+++ b/frontend/src/components/NavBar/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: #1d0816;
+    background: var(--prim);
     height: 80px;
     display: flex;
     justify-content: space-between;
