--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 #root {
-    --prim: #1d0816;
+    --prim: #1d0811;
     --seco: #661829;
     --tert: #860d2b;
     --quar: #571425;
@@ -8,6 +8,7 @@
     --sept: #141f29;
     --octo: #a31836;
     --nona: #141f299c;
+    --deca: #0b1218;
 }
 
 body {
