--- a/frontend/src/components/UserCard/styles.css
+++ b/frontend/src/components/UserCard/styles.css
@@ -1,29 +1,75 @@
+.cl-max-container {
+    padding: 60px;
+    justify-content: center;
+    background-color: var(--sept);
+}
+
+.cl-max-container hr {
+    margin: 1rem 0;
+    color: inherit;
+    background-color: var(--sena);
+    border: 0;
+    opacity: 1;
+}
+
+.cl-max-container li {
+    margin: 30px;
+}
+
+.cl-user-cont {
+    background-color: var(--deca);
+    border-radius: 30px;
+    padding: 20px;
+}
+
 .cl-user-card-image {
-    width: 100%;
-    border-radius: 8px 8px 0 0;
+    width: 300px;
+    border-radius: 30px 30px 30px 30px;
 }
 
-.cl-user-card-bottom-container {
-    background-color: #0b1218;
-    display: flex;
-    flex-direction: column;
+.cl-user-card-container {
+    width: 300px;
     align-items: center;
-    padding: 10px 10px 20px 10px;
-    border-radius: 0 0 8px 8px;
-    cursor: pointer;
+    background-color: var(--deca);
+    border-radius: 0px 0px 30px 30px;
     text-decoration-color: transparent;
-    margin-bottom: 5px;
+    padding: 10px;
+    display: grid;
 }
 
-.cl-user-card-bottom-container h3 {
+.cl-user-card-container h3 {
     text-align: center;
-    font-size: 14px;
+    font-size: 19px;
     font-weight: 700;
     min-height: 40px;
     color: #fff;
 }
 
+.cl-user-box-container {
+    background-color: var(--deca);
+    justify-content: center;
+    align-items: center;
+    margin: 0px 20px 60px 20px;
+    max-width: 350px;
+    border-radius: 30px;
+}
+
 .cl-user-badge-container {
-    height: 40px;
-    width: 100;
+    max-height: 50px;
+    display: flex;
+    overflow-x: auto;
+    background-color: var(--sept);
+    border-radius: 10px;
+    padding: 0px;
+}
+
+.cl-user-badge-container::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.badge-item {
+    width: 30px;
+    height: 30px;
+    margin-right: 3px;
 }
