--- a/frontend/src/components/UserCard/styles.css
+++ b/frontend/src/components/UserCard/styles.css
@@ -24,7 +24,7 @@
 
 .cl-user-card-image {
     width: 300px;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 30px 30px 0px 0px;
 }
 
 .cl-user-card-container {
@@ -35,6 +35,7 @@
     text-decoration-color: transparent;
     padding: 10px;
     display: grid;
+    border: 1px solid var(--sena);
 }
 
 .cl-user-card-container h3 {
