--- a/frontend/src/components/Pagination/styles.css
+++ b/frontend/src/components/Pagination/styles.css
@@ -57,7 +57,7 @@
 }
 
 .cl-pagination-one-container {
-    position: relative;
+    position: absolute;
     height: 300px;
     width: 60px;
     background-color: transparent;
