--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -48,9 +48,17 @@
     background-color: var(--sept);
 }
 
-.quest-nav-container {
+.quest-max-container {
     background-color: var(--sept);
     padding: 10px 5px 10px 5px;
+}
+
+.quest-chapter-container {
+    display: flex;
+    max-height: 600px;
+    width: 100%;
+    padding: 20px 10px 20px 10px;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 960px) {
