--- a/frontend/src/components/UserCard/styles.css
+++ b/frontend/src/components/UserCard/styles.css
@@ -23,7 +23,7 @@
 }
 
 .cl-user-card-image {
-    width: 300px;
+    max-width: 300px;
     border-radius: 30px 30px 0px 0px;
 }
 
@@ -38,9 +38,17 @@
     border: 1px solid var(--sena);
 }
 
-.cl-user-card-container h3 {
+.cl-max-container h3 {
     text-align: center;
     font-size: 19px;
+    font-weight: 700;
+    min-height: 40px;
+    color: #fff;
+}
+
+.cl-max-container h2 {
+    text-align: center;
+    font-size: 21px;
     font-weight: 700;
     min-height: 40px;
     color: #fff;
@@ -73,4 +81,63 @@
     width: 30px;
     height: 30px;
     margin-right: 3px;
+}
+
+@media screen and (max-width: 500px) {
+    .UserItems {
+        position: relative;
+    }
+    .cl-max-container {
+        padding: 40px;
+    }
+    .cl-user-card-container {
+        width: 250px;
+        align-items: center;
+        background-color: var(--deca);
+        border-radius: 0px 0px 30px 30px;
+        text-decoration-color: transparent;
+        padding: 10px;
+        display: grid;
+        border: 1px solid var(--sena);
+    }
+    .cl-user-cont {
+        width: 270px;
+        background-color: var(--deca);
+        border-radius: 30px;
+        padding: 20px;
+        border: 1px solid var(--sena);
+        font-size: smaller;
+    }
+    .cl-user-card-image {
+        max-width: 200px;
+        max-height: 250px;
+        border-radius: 30px 30px 0px 0px;
+    }
+    .cl-user-card-container {
+        max-width: 188px;
+        align-items: center;
+        background-color: var(--deca);
+        border-radius: 0px 0px 30px 30px;
+        text-decoration-color: transparent;
+        padding: 10px;
+        display: grid;
+        border: none;
+    }
+    .cl-user-card-container h3 {
+        text-align: center;
+        font-size: 17px;
+        font-weight: 700;
+        min-height: 40px;
+        color: #fff;
+    }
+    .cl-user-card-container h2 {
+        text-align: center;
+        font-size: 19px;
+        font-weight: 700;
+        min-height: 40px;
+        color: #fff;
+    }
+    .cl-max-container li {
+        margin: 0px;
+    }
 }
