--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -11,7 +11,7 @@
     max-inline-size: 100%;
     max-zoom: 100%;
     margin: 0;
-    height: 100%;
+    min-height: 1500px;
 }
 
 .pagination-page-container {
@@ -62,6 +62,10 @@
 }
 
 @media screen and (max-width: 960px) {
+    .container {
+        min-height: 1000px;
+        min-width: none;
+    }
     .article-max-container {
         width: 100%;
     }
@@ -70,5 +74,9 @@
     }
     .pagination-page-container {
         margin: 0;
+    }
+    .quest-chapter-container {
+        padding: 20px 10px 20px 10px;
+        border-radius: 10px;
     }
 }
