--- a/frontend/src/components/Article/styles.css
+++ b/frontend/src/components/Article/styles.css
@@ -1,7 +1,7 @@
 .article-container {
+    margin: auto;
+    justify-content: center;
     background-color: #0b1218;
-    margin-left: 5px;
-    width: initial;
     max-height: 600px;
     text-align: center;
     border-radius: 10px;
@@ -24,12 +24,11 @@
     font-size: x-large;
 }
 
-@media screen and (max-width: 658px) {
+@media screen and (max-width: 630px) {
     .article-container {
         background-color: #0b1218;
         margin-left: 5px;
         width: initial;
-        max-height: 600px;
         text-align: center;
         border-radius: 10px;
     }
