--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,8 +11,17 @@
     --deca: #0b1218;
 }
 
-body {
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+
+body {
+    background-color: var(--sept);
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
