--- a/frontend/src/components/Article/styles.css
+++ b/frontend/src/components/Article/styles.css
@@ -24,10 +24,22 @@
     font-size: x-large;
 }
 
+.article-card-info {
+    background-color: var(--nona);
+    border: 1px solid var(--sena);
+}
+
+.article-image {
+    border-radius: 30px 30px 0px 0px;
+}
+
+.article-sumary {
+    border-bottom: 1px solid var(--sena);
+}
+
 @media screen and (max-width: 630px) {
     .article-container {
         background-color: #0b1218;
-        margin-left: 5px;
         width: initial;
         text-align: center;
         border-radius: 10px;
