--- a/frontend/src/components/NavBar/styles.css
+++ b/frontend/src/components/NavBar/styles.css
@@ -57,7 +57,15 @@
     color: #fff;
 }
 
+.profile-nav {
+    display: none;
+}
+
 .nav-links-mobile {
+    display: none;
+}
+
+.nav-links-image {
     display: none;
 }
 
@@ -110,7 +118,6 @@
         font-size: 2rem;
     }
     .profile-nav {
-        background-color: #fff;
         display: flex;
         width: 100%;
         align-items: center;
@@ -142,11 +149,22 @@
         text-align: center;
         padding: 1em;
         border-radius: 50px;
-        width: 100%;
-        background: var(--tert);
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
+        width: 100%;
+        background-color: var(--tert);
+    }
+    .nav-links-image {
+        display: flex;
+        text-align: center;
+        border-radius: 360px;
+        border: 3px solid var(--tert);
+        text-decoration: none;
+        color: #fff;
+        font-size: 1.5rem;
+        width: 200px;
+        height: 200px;
     }
     .nav-links-mobile:hover {
         background-color: var(--octo);
