--- a/frontend/src/components/ArticleCard/styles.css
+++ b/frontend/src/components/ArticleCard/styles.css
@@ -33,3 +33,19 @@
     text-align: end;
     font-size: smaller;
 }
+
+@media screen and (max-width: 660px) {
+    .article-card-container {
+        min-width: 200px;
+        max-height: 220px;
+        font-size: 9px;
+    }
+    .article-card-container h3 {
+        text-align: center;
+        font-size: 11px;
+        font-weight: 700;
+        min-height: 40px;
+        color: #fff;
+        text-decoration: transparent;
+    }
+}
