--- a/frontend/src/components/Footer/styles.css
+++ b/frontend/src/components/Footer/styles.css
@@ -1,5 +1,4 @@
 .footer-max-container {
-    position: static;
     min-height: 600px;
     width: 100%;
     background-color: var(--prim);
@@ -18,6 +17,16 @@
     margin-bottom: 20px;
     color: #fff;
     font-size: 20px;
+    font-weight: 100;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.footer-container h5 {
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: x-large;
     font-weight: 100;
     justify-content: center;
     align-items: center;
@@ -68,11 +77,29 @@
     padding-top: 30px;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 660px) {
     .footer-max-container {
-        position: static;
         min-height: 14in;
         min-zoom: 100%;
         background-color: var(--prim);
+    }
+    .footer-container {
+        margin: 320;
+        width: 90%;
+    }
+    .footer-logo {
+        margin-left: 5px;
+        height: 70px;
+        width: 70px;
+        padding-top: 10px;
+    }
+    .footer-base-text-container {
+        padding: 5px 10px 5px 10px;
+        text-align: center;
+        font-size: small;
+    }
+    .footer-base-container {
+        height: 60px;
+        padding-top: 20px;
     }
 }
