--- a/frontend/src/components/NavBar/styles.css
+++ b/frontend/src/components/NavBar/styles.css
@@ -1,5 +1,7 @@
 .navbar {
-    background: var(--prim);
+    background: linear-gradient(138deg, rgba(52, 2, 24, 1) 18%, rgba(29, 8, 17, 0.9823943661971831) 97%, rgba(36, 8, 15, 1) 100%);
+    ;
+    ;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -99,11 +101,11 @@
     .navbar-logo {
         position: absolute;
         top: 0;
-        left: 0;
         transform: translate(20%, 20%);
         justify-self: start;
-        margin-left: 30px;
-        margin-bottom: 40px;
+        margin-left: 15px;
+        margin-bottom: 30px;
+        height: 56px;
     }
     .menu-icon {
         display: block;
