--- a/frontend/src/components/Form/styles.css
+++ b/frontend/src/components/Form/styles.css
@@ -50,7 +50,7 @@
 }
 
 .cl-card-bottom-container {
-    background-color: #0b1218;
+    background-color: #0c171f;
     display: flex;
     flex-direction: column;
     align-items: center;
