Raking Page, Ranking Table

--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -66,6 +66,6 @@
         padding: 5px;
     }
     .quest-chapter-container {
-        background-color: transparent;
+        margin: 5px
     }
 }
