--- a/frontend/src/components/Form/styles.css
+++ b/frontend/src/components/Form/styles.css
@@ -44,7 +44,7 @@
     border: 2px solid var(--seco);
 }
 
-.cl-quest-card-image {
+.card-form-image {
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
