--- a/frontend/src/components/QuestCard/styles.css
+++ b/frontend/src/components/QuestCard/styles.css
@@ -44,3 +44,56 @@
     padding: 20px 20px 20px 20px;
     line-height: 20px;
 }
+
+.cl-card-info li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.cl-card-info nav {
+    width: 100%;
+    margin: 8px auto;
+    background-color: var(--deca);
+    border-radius: 10px;
+}
+
+.cl-card-info span {
+    padding: 10px;
+    border: 1px solid var(--tert);
+    background: var(--deca);
+    color: var(--sena);
+    border-radius: 4px;
+    font-size: 1.2em;
+    cursor: pointer;
+    display: block;
+}
+
+.cl-card-info span::after {
+    float: right;
+    right: 10%;
+    content: "+";
+}
+
+.slide {
+    clear: both;
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+    text-align: start;
+    transition: height .4 ease;
+}
+
+.slide li {
+    padding: 14px;
+    align-items: center;
+}
+
+#touch {
+    position: absolute;
+    opacity: 0;
+    height: 0px;
+}
+
+#touch:checked+.slide {
+    height: 300px;
+}
