--- a/frontend/src/components/RankingDetails/styles.css
+++ b/frontend/src/components/RankingDetails/styles.css
@@ -68,17 +68,19 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 2px;
-    background-color: var(--quar);
-    border: 2px solid var(--quar);
+    border: 2px solid var(--tert);
     display: flex;
-    min-height: 50px;
-    min-width: 110px;
-    border-radius: .6rem;
-    cursor: pointer;
-    text-overflow: ellipsis;
-    text-decoration: none;
+    min-height: 90px;
+    min-width: 90px;
+    margin-right: 30px;
+    margin-left: 30px;
+    border-radius: 360px;
     color: var(--sena);
+}
+
+.options-btn-image {
+    min-height: 60px;
+    min-width: 60px;
 }
 
 .options-btn:hover {
@@ -125,5 +127,15 @@
         height: 25px;
         width: 25px;
         padding: 1px;
+    }
+    .options-btn {
+        min-height: 60px;
+        min-width: 60px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .options-btn-image {
+        min-height: 40px;
+        min-width: 40px;
     }
 }
