--- a/frontend/src/components/ArticleCard/styles.css
+++ b/frontend/src/components/ArticleCard/styles.css
@@ -1,6 +1,6 @@
 .article-card-container {
     min-width: 250px;
-    max-height: 250px;
+    height: 250px;
     background-color: #0b1218;
     color: #fff;
     text-decoration: underline;
@@ -10,6 +10,12 @@
     border-radius: 10px;
     margin: 5px;
     font-size: 12px;
+    overflow-y: scroll;
+}
+
+.article-card-container::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
 }
 
 .article-card-container h3 {
@@ -38,13 +44,13 @@
     .article-card-container {
         min-width: 200px;
         max-height: 220px;
-        font-size: 9px;
+        font-size: 10px;
     }
     .article-card-container h3 {
         text-align: center;
         font-size: 11px;
-        font-weight: 700;
-        min-height: 40px;
+        font-weight: 500;
+        max-height: 40px;
         color: #fff;
         text-decoration: transparent;
     }
