--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@
 
 body {
     height: 1500px;
-    background-color: #1d0811;
+    background-color: #141f29;
     margin: 0;
     padding: 0;
     box-sizing: 0;
