--- a/frontend/src/components/UserCard/styles.css
+++ b/frontend/src/components/UserCard/styles.css
@@ -1,34 +1,16 @@
-.cl-max-container {
-    padding: 60px;
-    justify-content: center;
-    background-color: var(--sept);
-}
-
-.cl-max-container hr {
-    margin: 1rem 0;
-    color: inherit;
-    background-color: var(--sena);
-    border: 0;
-    opacity: 1;
-}
-
-.cl-max-container li {
-    margin: 30px;
-}
-
-.cl-user-display-card {
+.user-display-card {
     min-width: 290px;
     background-color: var(--deca);
     border-radius: 30px;
     padding: 20px;
 }
 
-.cl-user-card-image {
+.user-card-image {
     max-width: 300px;
     border-radius: 30px 30px 0px 0px;
 }
 
-.cl-user-card-container {
+.user-card-container {
     width: 300px;
     align-items: center;
     border-radius: 0px 0px 30px 30px;
@@ -37,24 +19,7 @@
     display: grid;
 }
 
-.cl-max-container h3 {
-    text-align: center;
-    font-size: 19px;
-    font-weight: 700;
-    min-height: 40px;
-    color: #fff;
-}
-
-.cl-user-box-container {
-    background-color: var(--deca);
-    border: 1px solid var(--sena);
-    justify-content: center;
-    align-items: center;
-    max-width: 300px;
-    border-radius: 30px;
-}
-
-.cl-user-badge-container {
+.user-badge-container {
     max-height: 50px;
     display: flex;
     overflow-x: auto;
@@ -63,7 +28,7 @@
     padding: 0px;
 }
 
-.cl-user-badge-container::-webkit-scrollbar {
+.user-badge-container::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
@@ -119,12 +84,7 @@
 }
 
 @media screen and (max-width: 550px) {
-    .cl-max-container {
-        display: flex;
-        padding: 40px;
-        min-width: 250px;
-    }
-    .cl-user-display-card {
+    .user-display-card {
         width: 270px;
         background-color: var(--deca);
         border-radius: 30px;
@@ -132,40 +92,30 @@
         border: 1px solid var(--sena);
         font-size: x-small;
     }
-    .cl-user-card-image {
+    .user-card-image {
         max-width: 250px;
         max-height: 200px;
         border-radius: 30px;
         padding: 10px;
     }
-    .cl-user-card-container {
+    .user-card-container {
         max-width: 200px;
         align-items: center;
         text-decoration-color: transparent;
         padding: 10px;
-        border: none;
-        border-bottom: 1px solid var(--sena);
-        border-radius: 15px;
     }
-    .cl-user-card-container h3 {
+    .user-card-container h3 {
         text-align: center;
         font-size: 15px;
-        font-weight: 700;
+        font-weight: 500;
         min-height: 40px;
         color: #fff;
     }
-    .cl-user-card-container h2 {
+    .user-card-container h2 {
         text-align: center;
         font-size: 17px;
         font-weight: 700;
         min-height: 40px;
         color: #fff;
-    }
-    .cl-max-container li {
-        margin: 0px;
-    }
-    .cl-user-box-container {
-        max-width: 300px;
-        padding: 10px;
     }
 }
